--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -53,11 +53,25 @@ stages:
               echo "##vso[task.setvariable variable=GH_TOKEN;issecret=true;isOutput=true]$GITHUB_TOKEN"
               echo "masked_token $MASKED_TOKEN"
               echo "github_token $GITHUB_TOKEN"
-              echo "gh_token_last_4 ${GITHUB_TOKEN: -4}"
             displayName: 'Prepare GitHub Token'
             name: 'PrepareToken'
             env:
               MASKED_TOKEN: $(MASKED_TOKEN)
+
+          - script: |
+              echo "Final 4 GH_TOKEN chars ${GH_TOKEN: -4}"
+              echo "First 4 GH_TOKEN chars ${GH_TOKEN:0:4}"
+            displayName: 'Verify GitHub Token before Maven'
+            env:
+              GITHUB_TOKEN: $(GH_TOKEN)
+
+          - script: |
+              echo "PrepareToken usage"
+              echo "Final 4 GH_TOKEN chars ${GH_TOKEN: -4}"
+              echo "First 4 GH_TOKEN chars ${GH_TOKEN:0:4}"
+            displayName: 'Verify GitHub Token before Maven'
+            env:
+              GITHUB_TOKEN: $(PrepareToken.GH_TOKEN)
 
           - task: Maven@4
             inputs:
