--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -48,24 +48,24 @@ stages:
               docker run -p 10000:10000 -p 10001:10001 -p 10002:10002 mcr.microsoft.com/azure-storage/azurite &
             displayName: Run azurite to test Service - Storage integration
 
-          - script: |
-              GITHUB_TOKEN="ghp_${MASKED_TOKEN#XYZ_}"
-              echo "##vso[task.setvariable variable=GH_TOKEN;isOutput=true]$GITHUB_TOKEN"
-              echo "masked_token $MASKED_TOKEN"
-              echo "github_token $GITHUB_TOKEN"
-              echo "github_token Token format: ${GITHUB_TOKEN:0:8}...${GITHUB_TOKEN: -4}"
-            displayName: 'Prepare GitHub Token'
-            name: 'PrepareToken'
-            env:
-              MASKED_TOKEN: $(MASKED_TOKEN)
-
-          - script: |
-              echo "PrepareToken usage"
-              echo "Final 4 GITHUB_TOKEN chars ${GITHUB_TOKEN: -4}"
-              echo "First 4 GITHUB_TOKEN chars ${GITHUB_TOKEN:0:4}"
-            displayName: 'Verify GitHub Token before Maven'
-            env:
-              GITHUB_TOKEN: $[ steps.PrepareToken.outputs['GH_TOKEN'] ]
+#          - script: |
+#              GITHUB_TOKEN="ghp_${MASKED_TOKEN#XYZ_}"
+#              echo "##vso[task.setvariable variable=GH_TOKEN;isOutput=true]$GITHUB_TOKEN"
+#              echo "masked_token $MASKED_TOKEN"
+#              echo "github_token $GITHUB_TOKEN"
+#              echo "github_token Token format: ${GITHUB_TOKEN:0:8}...${GITHUB_TOKEN: -4}"
+#            displayName: 'Prepare GitHub Token'
+#            name: 'PrepareToken'
+#            env:
+#              MASKED_TOKEN: $(MASKED_TOKEN)
+#
+#          - script: |
+#              echo "PrepareToken usage"
+#              echo "Final 4 GITHUB_TOKEN chars ${GITHUB_TOKEN: -4}"
+#              echo "First 4 GITHUB_TOKEN chars ${GITHUB_TOKEN:0:4}"
+#            displayName: 'Verify GitHub Token before Maven'
+#            env:
+#              GITHUB_TOKEN: $(PrepareToken.GH_TOKEN)
 
           - task: Maven@4
             inputs:
@@ -79,7 +79,7 @@ stages:
               goals: 'clean validate'
               sonarQubeRunAnalysis: false
             env:
-              GITHUB_TOKEN: $[ steps.PrepareToken.outputs['GH_TOKEN'] ]
+              GITHUB_TOKEN: "ghp_$(MASKED_TOKEN.substring(4))"
 
           - task: Maven@4
             inputs:
@@ -93,7 +93,7 @@ stages:
               goals: 'clean verify'
               sonarQubeRunAnalysis: true
             env:
-              GITHUB_TOKEN: $[ steps.PrepareToken.outputs['GH_TOKEN'] ]
+              GITHUB_TOKEN: "ghp_$(MASKED_TOKEN.substring(4))"
 
           - task: SonarCloudPublish@3
             displayName: 'Publish SonarCloud results on build summary'
