--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -74,10 +74,26 @@ stages:
               echo "github_token $GITHUB_TOKEN"
             displayName: 'Print temp Token 3'
 
-#          - script: |
-#              echo "github_token $GITHUB_TOKEN"
-#            displayName: 'Print temp Token 4'
-#            dependsOn: 'PrepareToken'
+          - task: Bash@3
+            displayName: 'Create Maven settings.xml'
+            inputs:
+              targetType: 'inline'
+              script: |
+                mkdir -p $(Pipeline.Workspace)/.m2
+                cat > $(Pipeline.Workspace)/.m2/settings.xml << EOF
+                <?xml version="1.0" encoding="UTF-8"?>
+                <settings>
+                  <servers>
+                    <server>
+                      <id>github</id>
+                      <username>token</username>
+                      <password>${GITHUB_TOKEN}</password>
+                    </server>
+                  </servers>
+                </settings>
+                EOF
+            env:
+              GITHUB_TOKEN: $(GITHUB_TOKEN)
 
           - task: Maven@4
             inputs:
