--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -46,32 +46,10 @@ stages:
               docker run -p 10000:10000 -p 10001:10001 -p 10002:10002 mcr.microsoft.com/azure-storage/azurite &
           displayName: Run azurite to test Service - Storage integration
 
-        - task: Bash@3
-          displayName: 'Create Maven settings.xml'
-          inputs:
-            targetType: 'inline'
-            script: |
-              mkdir -p $(Pipeline.Workspace)/.m2
-              cat > $(Pipeline.Workspace)/.m2/settings.xml << EOF
-              <?xml version="1.0" encoding="UTF-8"?>
-              <settings>
-                <servers>
-                  <server>
-                    <id>github</id>
-                    <username>token</username>
-                    <password>${GITHUB_RO_TOKEN}</password>
-                  </server>
-                </servers>
-              </settings>
-              EOF
-          env:
-            GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
-
         - task: Maven@4
           inputs:
             mavenPomFile: 'pom.xml'
             mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
-            options: "-s $(Pipeline.Workspace)/.m2/settings.xml"
             javaHomeOption: 'JDKVersion'
             jdkVersionOption: '21'
             jdkArchitectureOption: 'x64'
@@ -80,13 +58,12 @@ stages:
             goals: 'clean validate'
             sonarQubeRunAnalysis: false
           env:
-            GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
+            GITHUB_RO_TOKEN: $(GITHUB_RO_TOKEN)
 
         - task: Maven@4
           inputs:
             mavenPomFile: 'pom.xml'
             mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
-            options: "-s $(Pipeline.Workspace)/.m2/settings.xml"
             javaHomeOption: 'JDKVersion'
             jdkVersionOption: '21'
             jdkArchitectureOption: 'x64'
@@ -95,7 +72,7 @@ stages:
             goals: 'clean verify'
             sonarQubeRunAnalysis: true
           env:
-            GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
+            GITHUB_RO_TOKEN: $(GITHUB_RO_TOKEN)
 
         - task: SonarCloudPublish@3
           displayName: 'Publish SonarCloud results on build summary'
@@ -122,7 +99,7 @@ stages:
         - script: docker compose up pagopa-ecommerce-transactions-service pagopa-ecommerce-payment-methods-service pagopa-ecommerce-event-dispatcher-service mongo redis storage pagopa-pdv-mock pagopa-gec-mock pagopa-npg-mock pagopa-node-mock traefik azurite-init pagopa-psp-mock pagopa-jwt-issuer-mock -d
           displayName: 'Run app with docker-compose'
           env:
-            GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
+            GITHUB_RO_TOKEN: $(GITHUB_RO_TOKEN)
         - script: |
               timeout 180 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:8080/actuator/health/liveness)" != "200" ]]; do sleep 5; done' || exit 1
           displayName: 'Health check'
