--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -58,7 +58,7 @@ stages:
             goals: 'clean validate'
             sonarQubeRunAnalysis: false
           env:
-            GITHUB_RO_TOKEN: $(GITHUB_RO_TOKEN)
+            GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
 
         - task: Maven@4
           inputs:
@@ -72,7 +72,7 @@ stages:
             goals: 'clean verify'
             sonarQubeRunAnalysis: true
           env:
-            GITHUB_RO_TOKEN: $(GITHUB_RO_TOKEN)
+            GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
 
         - task: SonarCloudPublish@3
           displayName: 'Publish SonarCloud results on build summary'
@@ -99,7 +99,7 @@ stages:
         - script: docker compose up pagopa-ecommerce-transactions-service pagopa-ecommerce-payment-methods-service pagopa-ecommerce-event-dispatcher-service mongo redis storage pagopa-pdv-mock pagopa-gec-mock pagopa-npg-mock pagopa-node-mock traefik azurite-init pagopa-psp-mock pagopa-jwt-issuer-mock -d
           displayName: 'Run app with docker-compose'
           env:
-            GITHUB_RO_TOKEN: $(GITHUB_RO_TOKEN)
+            GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
         - script: |
               timeout 180 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:8080/actuator/health/liveness)" != "200" ]]; do sleep 5; done' || exit 1
           displayName: 'Health check'
