--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -46,16 +46,38 @@ stages:
               docker run -p 10000:10000 -p 10001:10001 -p 10002:10002 mcr.microsoft.com/azure-storage/azurite &
           displayName: Run azurite to test Service - Storage integration
 
+        - task: Bash@3
+          displayName: 'Create Maven settings.xml'
+          inputs:
+            targetType: 'inline'
+            script: |
+              mkdir -p $(Pipeline.Workspace)/.m2
+              cat > $(Pipeline.Workspace)/.m2/settings.xml << EOF
+              <?xml version="1.0" encoding="UTF-8"?>
+              <settings>
+                <servers>
+                  <server>
+                    <id>github</id>
+                    <username>token</username>
+                    <password>${GITHUB_RO_TOKEN}</password>
+                  </server>
+                </servers>
+              </settings>
+              EOF
+          env:
+            GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
+
         - task: Maven@4
           inputs:
             mavenPomFile: 'pom.xml'
             mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
+            options: "-s $(Pipeline.Workspace)/.m2/settings.xml"
             javaHomeOption: 'JDKVersion'
             jdkVersionOption: '21'
             jdkArchitectureOption: 'x64'
             publishJUnitResults: false
             testResultsFiles: '**/surefire-reports/TEST-*.xml'
-            goals: 'clean validate'
+            goals: 'clean validate -U'
             sonarQubeRunAnalysis: false
           env:
             GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
@@ -64,12 +86,13 @@ stages:
           inputs:
             mavenPomFile: 'pom.xml'
             mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
+            options: "-s $(Pipeline.Workspace)/.m2/settings.xml"
             javaHomeOption: 'JDKVersion'
             jdkVersionOption: '21'
             jdkArchitectureOption: 'x64'
             publishJUnitResults: false
             testResultsFiles: '**/surefire-reports/TEST-*.xml'
-            goals: 'clean verify'
+            goals: 'clean verify -U'
             sonarQubeRunAnalysis: true
           env:
             GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
