--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <url>https://maven.pkg.github.com/pagopa/pagopa-ecommerce-commons</url>
         </repository>
     </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/pagopa/depcheck</url>
+        </pluginRepository>
+    </pluginRepositories>
     <properties>
         <java.version>21</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
@@ -604,6 +610,24 @@
                         <phase>compile</phase>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>it.pagopa.maven</groupId>
+                <artifactId>depcheck</artifactId>
+                <version>1.3.0</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <fileName>dep-sha256.json</fileName>
+                    <includePlugins>false</includePlugins>
+                    <includeParent>false</includeParent>
+                </configuration>
             </plugin>
         </plugins>
     </build>
