--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -12,6 +12,7 @@ parameters:
     values:
       - False
       - True
+
   - name: 'UAT_PROD_DEPLOY'
     displayName: 'Deploy on UAT environment with PROD promotion'
     type: boolean
@@ -19,6 +20,7 @@ parameters:
     values:
       - False
       - True
+
   - name: 'SKIP_BUILD'
     displayName: 'Check this flag to skip build and proceed to deploy a docker image previously built'
     type: boolean
@@ -26,6 +28,7 @@ parameters:
     values:
       - False
       - True
+
   - name: "FORCE_REPLACE_DOCKER_IMAGE"
     displayName: "Force the existing docker image to be replaced (latest tag)"
     type: boolean
@@ -33,6 +36,22 @@ parameters:
     values:
       - False
       - True
+
+  - name: "DOCKERFILE"
+    displayName: "Dockerfile path"
+    type: string
+    default: "Dockerfile"
+
+  - name: "DOCKERCONTEXT"
+    displayName: "Docker build context"
+    type: string
+    default: "."
+
+  - name: "DOCKER_BUILD_ARGS"
+    displayName: "Docker build arguments"
+    type: string
+    default: "--secret id=GITHUB_TOKEN,env=GITHUB_TOKEN"
+
   - name: "UAT_SKIP_BLUE_DEPLOYMENT"
     displayName: "Skip blue/green UAT deployment strategy: activating this parameter no blue version will be created and the pipeline proceed building and deploy artifact green version"
     type: boolean
@@ -40,6 +59,7 @@ parameters:
     values:
       - False
       - True
+
   - name: "PROD_SKIP_BLUE_DEPLOYMENT"
     displayName: "Skip blue/green PROD deployment strategy: activating this parameter no blue version will be created and the pipeline proceed building and deploy artifact green version"
     type: boolean
@@ -73,13 +93,59 @@ stages:
       - job: Build_docker
         displayName: Build docker with Build.SourceVersion as TAG
         steps:
-          - template: templates/docker-release/template.yaml@pagopaCommons
-            parameters:
-              CONTAINER_REGISTRY_SERVICE_CONN: $(DEV_CONTAINER_REGISTRY_SERVICE_CONN)
-              CONTAINER_REGISTRY_FQDN: $(DEV_CONTAINER_NAMESPACE)
-              DOCKER_IMAGE_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
-              DOCKER_IMAGE_TAG: $(Build.SourceVersion)
-              FORCE_REPLACE_DOCKER_IMAGE: ${{ parameters.FORCE_REPLACE_DOCKER_IMAGE }}
+          - task: Docker@2
+            displayName: "docker login"
+            inputs:
+              containerRegistry: $(DEV_CONTAINER_REGISTRY_SERVICE_CONN)
+              command: "login"
+
+          - task: Bash@3
+            displayName: "docker build and push (force)"
+            condition: and(succeeded(), eq(${{ parameters.FORCE_REPLACE_DOCKER_IMAGE }}, True))
+            env:
+              GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
+            inputs:
+              targetType: "inline"
+              script: |
+                echo "[INFO] the parameter FORCE_REPLACE_DOCKER_IMAGE is set to true, start build and push"
+                echo "[INFO] Image version: $(Build.SourceVersion)"
+                docker build -t $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) \
+                  -f ${{ parameters.DOCKERFILE }} \
+                  ${{ parameters.DOCKER_BUILD_ARGS }} \
+                  ${{ parameters.DOCKERCONTEXT }}
+                docker build -t $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest \
+                  -f ${{ parameters.DOCKERFILE }} \
+                  ${{ parameters.DOCKER_BUILD_ARGS }} \
+                  ${{ parameters.DOCKERCONTEXT }}
+                docker push $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
+                docker push $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest
+
+          - task: Bash@3
+            displayName: "docker build and push"
+            condition: and(succeeded(), eq(${{ parameters.FORCE_REPLACE_DOCKER_IMAGE }}, False))
+            env:
+              GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
+            inputs:
+              targetType: "inline"
+              script: |
+                # docker will return 0 on success or 1 on failure.
+                echo "[INFO] Image version: $(Build.SourceVersion)"
+                docker manifest inspect $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) > /dev/null
+                if [ $? -eq 0 ]; then
+                  echo "[INFO] docker image already exists in the registry, skip build and push"
+                else
+                  echo "[INFO] docker image does not exist in the registry, start build and push"
+                  docker build -t $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) \
+                    -f ${{ parameters.DOCKERFILE }} \
+                    ${{ parameters.DOCKER_BUILD_ARGS }} \
+                    ${{ parameters.DOCKERCONTEXT }}
+                  docker build -t $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest \
+                    -f ${{ parameters.DOCKERFILE }} \
+                    ${{ parameters.DOCKER_BUILD_ARGS }} \
+                    ${{ parameters.DOCKERCONTEXT }}
+                  docker push $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
+                  docker push $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest
+                fi
 
   - stage: 'Deploy_for_DEV'
     displayName: 'Deploy DEV'
@@ -158,13 +224,60 @@ stages:
       - job: "build"
         displayName: 'Build release candidate docker image'
         steps:
-          - template: templates/docker-release/template.yaml@pagopaCommons
-            parameters:
-              CONTAINER_REGISTRY_SERVICE_CONN: $(UAT_CONTAINER_REGISTRY_SERVICE_CONN)
-              CONTAINER_REGISTRY_FQDN: $(UAT_CONTAINER_NAMESPACE)
-              DOCKER_IMAGE_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
-              DOCKER_IMAGE_TAG: $(Build.SourceVersion)
-              FORCE_REPLACE_DOCKER_IMAGE: ${{ parameters.FORCE_REPLACE_DOCKER_IMAGE }}
+          - task: Docker@2
+            displayName: "docker login"
+            inputs:
+              containerRegistry: $(UAT_CONTAINER_REGISTRY_SERVICE_CONN)
+              command: "login"
+
+          - task: Bash@3
+            displayName: "docker build and push (force)"
+            condition: and(succeeded(), eq(${{ parameters.FORCE_REPLACE_DOCKER_IMAGE }}, True))
+            env:
+              GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
+            inputs:
+              targetType: "inline"
+              script: |
+                echo "[INFO] the parameter FORCE_REPLACE_DOCKER_IMAGE is set to true, start build and push"
+                echo "[INFO] Image version: $(Build.SourceVersion)"
+                docker build -t $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) \
+                  -f ${{ parameters.DOCKERFILE }} \
+                  ${{ parameters.DOCKER_BUILD_ARGS }} \
+                  ${{ parameters.DOCKERCONTEXT }}
+                docker build -t $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest \
+                  -f ${{ parameters.DOCKERFILE }} \
+                  ${{ parameters.DOCKER_BUILD_ARGS }} \
+                  ${{ parameters.DOCKERCONTEXT }}
+                docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
+                docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest
+
+          - task: Bash@3
+            displayName: "docker build and push"
+            condition: and(succeeded(), eq(${{ parameters.FORCE_REPLACE_DOCKER_IMAGE }}, False))
+            env:
+              GITHUB_TOKEN: $(GITHUB_RO_TOKEN)
+            inputs:
+              targetType: "inline"
+              script: |
+                # docker will return 0 on success or 1 on failure.
+                echo "[INFO] Image version: $(Build.SourceVersion)"
+                docker manifest inspect $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) > /dev/null
+                if [ $? -eq 0 ]; then
+                  echo "[INFO] docker image already exists in the registry, skip build and push"
+                else
+                  echo "[INFO] docker image does not exist in the registry, start build and push"
+                  docker build -t $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) \
+                    -f ${{ parameters.DOCKERFILE }} \
+                    ${{ parameters.DOCKER_BUILD_ARGS }} \
+                    ${{ parameters.DOCKERCONTEXT }}
+                  docker build -t $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest \
+                    -f ${{ parameters.DOCKERFILE }} \
+                    ${{ parameters.DOCKER_BUILD_ARGS }} \
+                    ${{ parameters.DOCKERCONTEXT }}
+                  docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
+                  docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest
+                fi
+
           - template: azure-templates/chart-current-version.yml
 
   - stage: "Deploy_UAT_Blue"
