revert ecommerce-local branch to main

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -12,7 +12,7 @@ resources:
     - repository: pagopaEcommerceLocal
       type: github
       name: pagopa/pagopa-ecommerce-local
-      ref: CHK-4392-ecommerce-commons-gh-package
+      ref: main
       endpoint: 'io-azure-devops-github-ro'
 
 stages:
