--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -37,21 +37,6 @@ parameters:
       - False
       - True
 
-  - name: "DOCKERFILE"
-    displayName: "Dockerfile path"
-    type: string
-    default: "Dockerfile"
-
-  - name: "DOCKERCONTEXT"
-    displayName: "Docker build context"
-    type: string
-    default: "."
-
-  - name: "DOCKER_BUILD_ARGS"
-    displayName: "Docker build arguments"
-    type: string
-    default: "--secret id=GITHUB_TOKEN,env=GITHUB_TOKEN"
-
   - name: "UAT_SKIP_BLUE_DEPLOYMENT"
     displayName: "Skip blue/green UAT deployment strategy: activating this parameter no blue version will be created and the pipeline proceed building and deploy artifact green version"
     type: boolean
@@ -110,13 +95,13 @@ stages:
                 echo "[INFO] the parameter FORCE_REPLACE_DOCKER_IMAGE is set to true, start build and push"
                 echo "[INFO] Image version: $(Build.SourceVersion)"
                 docker build -t $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) \
-                  -f ${{ parameters.DOCKERFILE }} \
-                  ${{ parameters.DOCKER_BUILD_ARGS }} \
-                  ${{ parameters.DOCKERCONTEXT }}
+                  -f Dockerfile \
+                  --secret id=GITHUB_TOKEN,env=GITHUB_TOKEN \
+                  .
                 docker build -t $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest \
-                  -f ${{ parameters.DOCKERFILE }} \
-                  ${{ parameters.DOCKER_BUILD_ARGS }} \
-                  ${{ parameters.DOCKERCONTEXT }}
+                  -f Dockerfile \
+                  --secret id=GITHUB_TOKEN,env=GITHUB_TOKEN \
+                  .
                 docker push $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
                 docker push $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest
 
@@ -136,13 +121,13 @@ stages:
                 else
                   echo "[INFO] docker image does not exist in the registry, start build and push"
                   docker build -t $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) \
-                    -f ${{ parameters.DOCKERFILE }} \
-                    ${{ parameters.DOCKER_BUILD_ARGS }} \
-                    ${{ parameters.DOCKERCONTEXT }}
+                    -f Dockerfile \
+                    --secret id=GITHUB_TOKEN,env=GITHUB_TOKEN \
+                    .
                   docker build -t $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest \
-                    -f ${{ parameters.DOCKERFILE }} \
-                    ${{ parameters.DOCKER_BUILD_ARGS }} \
-                    ${{ parameters.DOCKERCONTEXT }}
+                    -f Dockerfile \
+                    --secret id=GITHUB_TOKEN,env=GITHUB_TOKEN \
+                    .
                   docker push $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
                   docker push $(DEV_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest
                 fi
@@ -241,13 +226,13 @@ stages:
                 echo "[INFO] the parameter FORCE_REPLACE_DOCKER_IMAGE is set to true, start build and push"
                 echo "[INFO] Image version: $(Build.SourceVersion)"
                 docker build -t $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) \
-                  -f ${{ parameters.DOCKERFILE }} \
-                  ${{ parameters.DOCKER_BUILD_ARGS }} \
-                  ${{ parameters.DOCKERCONTEXT }}
+                  -f Dockerfile \
+                  --secret id=GITHUB_TOKEN,env=GITHUB_TOKEN \
+                  .
                 docker build -t $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest \
-                  -f ${{ parameters.DOCKERFILE }} \
-                  ${{ parameters.DOCKER_BUILD_ARGS }} \
-                  ${{ parameters.DOCKERCONTEXT }}
+                  -f Dockerfile \
+                  --secret id=GITHUB_TOKEN,env=GITHUB_TOKEN \
+                  .
                 docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
                 docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest
 
@@ -267,13 +252,13 @@ stages:
                 else
                   echo "[INFO] docker image does not exist in the registry, start build and push"
                   docker build -t $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion) \
-                    -f ${{ parameters.DOCKERFILE }} \
-                    ${{ parameters.DOCKER_BUILD_ARGS }} \
-                    ${{ parameters.DOCKERCONTEXT }}
+                    -f Dockerfile \
+                    --secret id=GITHUB_TOKEN,env=GITHUB_TOKEN \
+                    .
                   docker build -t $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest \
-                    -f ${{ parameters.DOCKERFILE }} \
-                    ${{ parameters.DOCKER_BUILD_ARGS }} \
-                    ${{ parameters.DOCKERCONTEXT }}
+                    -f Dockerfile \
+                    --secret id=GITHUB_TOKEN,env=GITHUB_TOKEN \
+                    .
                   docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):$(Build.SourceVersion)
                   docker push $(UAT_CONTAINER_NAMESPACE)/$(K8S_IMAGE_REPOSITORY_NAME):latest
                 fi
