--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <java.version>21</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
         <jacoco.version>0.8.13</jacoco.version>
-        <pagopa-ecommerce-commons.version>3.0.2</pagopa-ecommerce-commons.version>
+        <pagopa-ecommerce-commons.version>3.1.0</pagopa-ecommerce-commons.version>
         <spotless.version>2.28.0</spotless.version>
         <ecs-logging-version>1.7.0</ecs-logging-version>
         <mock-web-server.version>4.11.0</mock-web-server.version>
@@ -561,7 +561,7 @@
                     <skipCheckoutIfExists>false</skipCheckoutIfExists>
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
                     <scmVersionType>branch</scmVersionType>
-                    <scmVersion>PIDM-852-update-to-reactive-redis</scmVersion>
+                    <scmVersion>remove-redis-sync</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
