--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -188,7 +188,7 @@ microservice-chart:
     JWT_ISSUER_READ_TIMEOUT: "10000"
     JWT_ISSUER_CONNECTION_TIMEOUT: "10000"
     SECURITY_API_KEYS_SECURED_PATHS: ""
-    TRANSACTIONSVIEW_UPDATE_ENABLED: "true"
+    TRANSACTIONSVIEW_UPDATE_ENABLED: "false"
   envSecret:
     NODO_NODEFORECOMMERCE_API_KEY: node-for-ecommerce-api-v2-key
     NODO_NODEFORPSP_API_KEY: nodo-nodeforpsp-api-key
