--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -83,7 +83,7 @@ stages:
               CONTAINER_REGISTRY_SERVICE_CONN: $(UAT_CONTAINER_REGISTRY_SERVICE_CONN)
               CONTAINER_REGISTRY_FQDN: $(UAT_CONTAINER_NAMESPACE)
               DOCKER_IMAGE_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
-              DOCKER_IMAGE_TAG: cdctest
+              DOCKER_IMAGE_TAG: cdctest-disablewrite
               FORCE_REPLACE_DOCKER_IMAGE: ${{ parameters.FORCE_REPLACE_DOCKER_IMAGE }}
           - template: azure-templates/chart-current-version.yml
 
@@ -91,7 +91,7 @@ stages:
     displayName: 'UAT green deployment'
     dependsOn: [Build_release_candidate]
     variables:
-      app_version: cdctest
+      app_version: cdctest-disablewrite
     jobs:
       - deployment: "Green_deployment"
         displayName: "Green deployment"
